--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/three": "^0.153.0",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.2"
+    "@types/three": "latest",
+    "typescript": "latest",
+    "vite": "latest"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "lil-gui": "^0.18.2",
-    "three": "^0.154.0"
+    "axios": "latest",
+    "gsap": "^3.13.0",
+    "lil-gui": "latest",
+    "three": "latest"
   }
 }
