chore: update dependencies and add GitHub Pages deployment workflow
- Updated Vite dependency version in package.json to ^7.0.5.
- Removed axios and gsap from dependencies in package.json.
- Imported globe and normal textures using URL imports in scene.ts.
- Modified texture loading in createSphere function to use imported textures.
- Added a GitHub Actions workflow for deploying static content to GitHub Pages.

--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   "devDependencies": {
     "@types/three": "latest",
     "typescript": "latest",
-    "vite": "latest"
+    "vite": "^7.0.5"
   },
   "dependencies": {
-    "axios": "latest",
-    "gsap": "^3.13.0",
     "lil-gui": "latest",
     "three": "latest"
   }
